--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "agency-wwebsite",
+  "name": "agency",
   "version": "0.1.0",
+  "homepage": "https://jinnn0.github.io/agency-website/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
+    "gsap": "^3.4.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
